--- a/projects/angular-modals/src/lib/modal-overlay.scss
+++ b/projects/angular-modals/src/lib/modal-overlay.scss
@@ -19,6 +19,7 @@
   .modal-dialog {
     min-width: 600px;
     max-width: 60%;
+    border-radius: 1px;
     background-color: #fff;
     color: #222;
     margin-top: 3%;
