--- a/projects/angular-modals/src/lib/modal-overlay.scss
+++ b/projects/angular-modals/src/lib/modal-overlay.scss
@@ -17,12 +17,12 @@
   }
   
   .modal-dialog {
-    min-width: 600px;
+    min-width: 60%;
     max-width: 60%;
     border-radius: 1px;
     background-color: #fff;
     color: #222;
-    margin-top: 3%;
+    margin-top: 20%;
     padding: 15px;
     box-shadow: 3px 4px 3px rgba(0, 0, 0, 0.6);
   }
@@ -32,3 +32,13 @@
     margin-bottom: 0;
   }
   
+  @media only screen and (max-width: 412px) {
+    .modal-dialog {
+      min-width: 85%;
+      margin-top: 60%;
+    }
+
+    .modal-dialog button {
+      font-size: 1.2em;
+    }
+  }
