--- a/projects/angular-modals/src/lib/modal-overlay.scss
+++ b/projects/angular-modals/src/lib/modal-overlay.scss
@@ -1,40 +1,47 @@
 .modal-overlay {
-    display: flex;
-    background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  background: rgba(0, 0, 0, 0.5);
+  flex-direction: column;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  align-items: center;
+  align-content: center;
+}
+
+.modal-overlay > * {
     flex-direction: column;
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    align-items: center;
-    align-content: center;
+    display: flex;
+}
+
+.modal-dialog {
+  min-width: 30%;
+  max-width: 30%;
+  border-radius: 1px;
+  background-color: #fff;
+  color: #222;
+  margin-top: 20%;
+  padding: 15px;
+  box-shadow: 3px 4px 3px rgba(0, 0, 0, 0.6);
+}
+
+.modal-dialog .footer button {
+  margin-right: 10px;
+  margin-bottom: 0;
+}
+
+@media only screen and (max-width: 412px) {
+  .modal-dialog {
+    min-width: 85%;
+    margin-top: 60%;
   }
-  
-  .modal-overlay > * {
-      flex-direction: column;
-      display: flex;
-  }
-  
+}
+
+@media only screen and (max-width: 1024px) {
   .modal-dialog {
     min-width: 60%;
     max-width: 60%;
-    border-radius: 1px;
-    background-color: #fff;
-    color: #222;
-    margin-top: 20%;
-    padding: 15px;
-    box-shadow: 3px 4px 3px rgba(0, 0, 0, 0.6);
   }
-  
-  .modal-dialog .footer button {
-    margin-right: 10px;
-    margin-bottom: 0;
-  }
-  
-  @media only screen and (max-width: 412px) {
-    .modal-dialog {
-      min-width: 85%;
-      margin-top: 60%;
-    }
-  }
+}
