switched to min-width

--- a/projects/angular-modals/src/lib/modal-overlay.scss
+++ b/projects/angular-modals/src/lib/modal-overlay.scss
@@ -17,8 +17,8 @@
 }
 
 .modal-dialog {
-  min-width: 30%;
-  max-width: 30%;
+  min-width: 60%;
+  max-width: 60%;
   border-radius: 1px;
   background-color: #fff;
   color: #222;
@@ -39,9 +39,9 @@
   }
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (min-width: 1025px) {
   .modal-dialog {
-    min-width: 60%;
-    max-width: 60%;
+    min-width: 30%;
+    max-width: 30%;
   }
 }
